Kafka Config/elk.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: elastic-kibana-deployment
  labels:
    app: elastic-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic-kibana
  template:
    metadata:
      labels:
        app: elastic-kibana
    spec:
      containers:
        - name: elastic-kibana
          image: nshou/elasticsearch-kibana
          ports:
            - containerPort: 9200
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: elastic-service
spec:
  selector:
    app: elastic-kibana
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: LoadBalancer
  selector:
    app: elastic-kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
      nodePort: 32000
